--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/x-data-grid": "^7.27.3",
+    "@mui/x-date-pickers": "^7.28.0",
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
